--- a/main.css
+++ b/main.css
@@ -170,15 +170,18 @@
 	.main-button{
 		width: 100%
 	}
+}
 
+@media screen and (max-height: 700px){
 	.main-button-box{
-		right: 50%;
-		transform: translateX(50%);
+		height: 100px;
 	}
 }
 
-@media screen and (max-height: 500px){
+
+@media screen and (max-width: 768px){
 	.main-button-box{
-		height: 100px;
+		right: 50%;
+		transform: translateX(50%);
 	}
 }
