--- a/main.css
+++ b/main.css
@@ -185,3 +185,74 @@
 		transform: translateX(50%);
 	}
 }
+
+.category-menu-box{
+	margin-bottom: 55px;
+}
+
+.category-menu-items{
+	text-transform: uppercase;
+	font-size: 15px;
+	font-weight: 800;
+	padding: 15px;
+	cursor: pointer;
+}
+
+.category-menu-items:first-child{
+	padding-left: 0;
+}
+
+.category-menu-items:hover{
+	color: #aae6e6;
+}
+
+.category-menu-list{
+	display: flex;
+}
+
+.good-card{
+	width: 420px;
+	height: 500px;
+	margin-right: 30px;
+}
+
+.good-image{
+	background-size: cover;
+	height: 100%;
+	width: 100%;
+}
+
+.good-1{
+	background-image: url(./Icons/good-1.png);
+}
+
+.good-2{
+	background-image: url(./Icons/good-2.png);
+
+}
+
+.good-price{
+	color: rgba(154, 154, 154, 255);
+	font-size: 19px;
+	padding: 15px 15px;
+}
+
+.good-card-desc{
+	color: rgba(142, 140, 140, 255);
+	background-color: #fff;
+	-webkit-box-shadow: 0px 17px 48px -15px rgba(0,0,0,0.56);
+	-moz-box-shadow: 0px 17px 48px -15px rgba(0,0,0,0.56);
+	box-shadow: 0px 17px 48px -15px rgba(0,0,0,0.56);
+	display: none;
+	padding-top: 25px;
+	text-align: center;
+}
+
+.good-card-name{
+	font-weight: 800;
+	margin: 0;
+}
+
+.good-card:hover .good-card-desc{
+	display: block;
+}
