--- a/styles/goodSection.css
+++ b/styles/goodSection.css
@@ -6,12 +6,10 @@
 	text-transform: uppercase;
 	font-size: 15px;
 	font-weight: 800;
-	padding: 15px;
 	cursor: pointer;
-}
-
-.category-menu-items:first-child{
-	padding-left: 0;
+	color: #727272;
+	margin: 20px 0;
+	margin-right: 20px;
 }
 
 .category-menu-items:hover{
@@ -25,14 +23,14 @@
 
 .good-card{
 	width: 48%;
-	height: 500px;
+	height: 40vw;
 	margin-bottom: 30px;
 	position: relative;
 }
 
 .good-card-big{
 	width: 100%;
-	height: 600px;
+	height: 50vw;
 	margin-bottom: 30px;
 	margin: 30 auto 0 auto;
 	position: relative;
@@ -136,19 +134,16 @@
 }
 
 @media screen and (max-width: 860px){
-	.category-menu-items{
-		margin: 0 20px;
-	}
 	.category-menu-list{
 		justify-content: center;
 	}
 }
 
-@media screen and (max-width: 610px){
-	.lookbook-tittle{
-		font-size: 7vw !important;
+@media screen and (max-width: 426px){
+	.category-menu-list{
+		justify-content: start;
 	}
-	.lookbook-info > p{
-		font-size: 2.5vw;
+	.category-menu-items{
+		width: 41%;
 	}
 }
