--- a/styles/header.css
+++ b/styles/header.css
@@ -2,12 +2,13 @@ header{
 	display: flex;
 	justify-content: space-between;
 	background-color: #333333;
-	height: 5vh;
+	height: 50px;
 	color: #777777;
 }
 
 .header-menu{
 	display: flex;
+	z-index: 5;
 }
 
 .header-menu div:first-child{
@@ -30,6 +31,29 @@ header{
 	cursor: pointer;
 	display: none;
 }
+
+.mobile-menu{
+	height: 0;
+	overflow: hidden;
+	color: #fff;
+	background-color: #3d3d3d;
+	transition: .5s ease-out;
+}
+
+.mobile-menu_item{
+	display: block;
+	text-align: center;
+	height: 40px;
+	text-transform: uppercase;
+	font-size: 15px;
+	cursor: pointer;
+	padding-top: 10px;
+}
+
+.mobile-menu_item:hover{
+	background-color: #3f3f3f;
+}
+
 
 @media only screen and (max-width: 590px) {
 	.header-menu{
