--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,6 @@
 .main-menu{
 	display: flex;
 	justify-content: space-between;
-	height: 100px;
 	align-items: center;
 }
 
@@ -22,7 +21,6 @@
 .main-menu-list > li{
 	text-transform: uppercase;
 	margin: auto 22px;
-	cursor: pointer;
 	font-size: 15px;
 	font-weight: 800;
 }
@@ -35,7 +33,7 @@
 	margin: 0;
 }
 
-.main-menu-list > li > p:hover{
+.main-menu-list > li > p > span:hover{
 	color: #00c8c8;
 }
 
@@ -55,6 +53,11 @@
 	box-shadow: 0px 26px 38px -21px rgba(0,0,0,0.66);
 	text-transform: uppercase;
 	background-color: #fff;
+}
+
+.main-menu-pop-up > img{
+	width: 100%;
+	margin: auto;
 }
 
 .main-menu-pop-up > div > ul{
@@ -78,6 +81,9 @@
 }
 
 .main{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	height: 95vh;
 	background-image: url(../Icons/main-bg.png);
 	background-size: cover;
@@ -85,10 +91,10 @@
 }
 
 .main-button-box{
-	position: absolute;
-	bottom: 0;
-	height: 200px;
-	right: 15%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	margin-bottom: 150px;
 }
 
 .main-button{
@@ -172,17 +178,11 @@
 	}
 }
 
-@media screen and (max-height: 700px){
-	.main-button-box{
-		height: 100px;
-	}
-}
-
-
-@media screen and (max-width: 768px){
-	.main-button-box{
-		right: 50%;
-		transform: translateX(50%);
+@media screen and (max-width: 500px){
+	.main-menu-pop-up{
+		left: 0;
+		width: 100%;
+		
 	}
 }
 
